# majel

./: .gitignore  .mise.toml  .sops.yaml  CLAUDE.md  deno.json  plan-argocd-notifications.md  plan-kanji-removal.md  plan-preact-migration.md  plan-voicevox-tts.md
.github/workflows/: build-and-push.yaml  ci-sensors.yaml  ci.yaml
app/: Dockerfile  deno.json
app/scripts/: 01_record.ts  02_transcribe.ts  mock_sensors.ts
app/src/: config.ts  main.ts  server.ts
app/static/: app.js  catalog.html  global.css  index.html  style.css
app/ui/: app.tsx  build.ts  catalog.tsx  main.tsx  signals.ts  ws.ts  ws_test.ts
docs/grafana/: majel-rpi5-dashboard.json
k8s/: root-app.yaml
k8s/apps/: argocd.yaml  kustomization.yaml  majel.yaml
k8s/base/: alsa-conf.yaml  app-deployment.yaml  app-service.yaml  configmap.yaml  kustomization.yaml  namespace.yaml  otel-clusterrole.yaml  otel-clusterrolebinding.yaml  otel-configmap.yaml  otel-daemonset.yaml  secret-generator.yaml  secret.enc.yaml  voicevox-deployment.yaml  voicevox-service.yaml
k8s/majel-news-record/: cronjob-am.yaml  (+2 more)
recorder/: Dockerfile  deno.json
scripts/: 01_record.ts  03_chat.ts  04_speak.ts  05_pipeline.ts  cc-post-write.sh  check-app.sh  check-sensors.sh  mock_co2.ts  mock_sensors.ts  pre-push  record.ps1  setup-hooks.sh
sensors/: Dockerfile  README.md  entrypoint.sh  main.py  pyproject.toml  wakeword_listener.py
sensors/models/: hey_majel.onnx
src/: config.ts  main.ts  server.ts
static/: app.js  index.html  style.css
training/: .dockerignore  .gitignore  Dockerfile  train-official.sh  train.sh
(+80 files in other folders)
