[project]
name = "majel-sensors"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "smbus2",
    "openwakeword @ git+https://github.com/dscripka/openWakeWord.git",
    "pyalsaaudio",
    "httpx",
    "numpy",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
# Third-party packages (smbus2, alsaaudio, openwakeword) have no type stubs
# and may not be installable in CI (e.g. pyalsaaudio needs ALSA headers)
unresolved-import = "ignore"
